Remove parts preventing MekWars compiling with 0.48